tests/errors/err08_pocos_args.ml
// Error 08: [SEMÁNTICO] Faltan argumentos
func mult(a, b) {
    return a * b;
}
r = mult(5);
print(r);
